--- a/doc/examples/softwaresite.mdwn
+++ b/doc/examples/softwaresite.mdwn
@@ -12,5 +12,5 @@ Some additional configuration you might want to do:
   static html documentation. ikiwiki itself uses a similar system to build
   its documentation.
 
-* Read the [[tips/issue_tracking]] article for tips about how to use
-  ikiwiki as a BTS.
+* Read the [[tips/integrated_issue_tracking_with_ikiwiki]] article for tips
+  about how to use ikiwiki as a BTS.
