--- a/doc/news/openid/discussion.mdwn
+++ b/doc/news/openid/discussion.mdwn
@@ -25,7 +25,7 @@ only Apache/iptables rules for this? Maybe it's related to
 [[ACL|todo/ACL]] request? --[[Paweł|ptecza]]
 
 > Well, the polls are not something I would worry about much. I do plan to
-> [[add_IP_range_banning|todo/spam_fighting]], although I expect to wait until
+> add_IP_range_banning, although I expect to wait until
 > there's a demonstrated need. --[[Joey]]
 
 >> Heh, do you really want a lot of spam of me? ;)
