--- a/doc/plugins/pagetemplate.mdwn
+++ b/doc/plugins/pagetemplate.mdwn
@@ -2,7 +2,7 @@
 [[tag type/chrome]]
 
 This plugin allows a page to be created using a different
-[[template|wikitemplate]]. The page text is inserted into the template, so
+[[template|wikitemplates]]. The page text is inserted into the template, so
 the template controls the overall look and feel of the wiki page. This is
 in contrast to the [[template]] plugin, which allows inserting templates
 _into_ the body of a page.
