--- a/doc/todo/CSS_classes_for_links.mdwn
+++ b/doc/todo/CSS_classes_for_links.mdwn
@@ -70,6 +70,6 @@ My best regards,
 > controls a link is when an internal link is added using a WikiLink.
 >
 > (Note that tags get their own special
-> [[rel_attribute|rel_attribute_for_link]] now that CSS can use.)
+> [[rel_attribute|rel_attribute_for_links]] now that CSS can use.)
 > 
 > --[[Joey]]
