--- a/doc/templates/plugin.mdwn
+++ b/doc/templates/plugin.mdwn
@@ -7,7 +7,7 @@ Included in [[/plugins/goodstuff]]: [[if test="backlink(plugins/goodstuff)" all=
 Currently enabled: [[if test="enabled(<TMPL_VAR name>)" then="yes" else="no"]]<br />
 </span>
 [[if test="sourcepage(plugins/contrib/*)" then="""[[meta title="<TMPL_VAR name> (third party plugin)"]]"""]]
-<TMPL_IF core>[[tag type/core]]</TMPL_IF>
+<TMPL_IF core>[[tag plugins/type/core]]</TMPL_IF>
 <TMPL_UNLESS NAME="name">
 This template is used to create an infobox for an ikiwiki plugin. It uses
 these parameters:
