--- a/doc/todo/wikiwyg/discussion.mdwn
+++ b/doc/todo/wikiwyg/discussion.mdwn
@@ -23,7 +23,7 @@ A few observations, in approximate order of priority:
   wikiwyg.tmpl out to a separate .js file to save space in the rendered
   pages.
  * Done.
-* Both this plugin and the [[Gallery_Plugin_for_Ikiwiki]] are turning out
+* Both this plugin and the [[Gallery]] are turning out
   to need to add a bunch of pages to the basewiki. I wonder what would be a
   good way to do this, without bloating the basewiki when the plugins arn't
   used. Perhaps the underlaydir concept needs to be expanded so it's a set
