--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -45,7 +45,7 @@ images, etc. These are not converted to wiki pages, they are just copied
 unchanged by ikiwiki as it builds your wiki. So you can check in an image,
 program, or other special file and link to it from your wiki pages.
 
-## [[Blogging|blog]]
+## Blogging
 
 You can turn any page in the wiki into a [[blog]]. Pages matching a
 specified [[PageSpec]] will be displayed as a weblog within the blog
