web commit by tschwinge: Typo fix.

--- a/doc/plugins/write/tutorial.mdwn
+++ b/doc/plugins/write/tutorial.mdwn
@@ -186,4 +186,4 @@ either case, it will run forever. Here's one way to fix that:
 		}
 
 As these security problems have demonstrated, even a simple input from the
-user needs to be checked thuroughly before being used by an ikiwiki plugin.
+user needs to be checked thoroughly before being used by an ikiwiki plugin.
