* Added tex plugin to generate images from latex code.   Contributed by Patrick Winnertz as a GSoC project.

--- a/debian/changelog
+++ b/debian/changelog
@@ -46,8 +46,10 @@ ikiwiki (2.6) UNRELEASED; urgency=low
   * Add proper Homepage field to Debian package (needs uber-new dpkg).
   * Add monotone support, contributed by William Uther.
   * Avoid ugly gettext messages if LANG is empty. Closes: #439035
+  * Added tex plugin to generate images from latex code.
+    Contributed by Patrick Winnertz as a GSoC project.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 21 Aug 2007 17:18:50 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 21 Aug 2007 20:34:59 -0400
 
 ikiwiki (2.5) unstable; urgency=low
 
