--- a/doc/bugs/CGI_problem_with_some_webservers.mdwn
+++ b/doc/bugs/CGI_problem_with_some_webservers.mdwn
@@ -65,3 +65,5 @@ Why do they appear two times with conflicting values in the very same hashes?
 >>> So I don't see any way to address this in ikiwiki. --[[Joey]]
 
 >>>> (reported as [[debbug 437927]] and [[debbug 437932]]) --[[JeremieKoenig]]
+
+Marking [[done]] since it's not really an ikiwiki bug. --[[Joey]]
