--- a/doc/post-commit.mdwn
+++ b/doc/post-commit.mdwn
@@ -1,4 +1,4 @@
-If your wiki is kept in [[revision control|rcs]], a post-commit hook is run
+If your wiki is kept in [[revision_control|rcs]], a post-commit hook is run
 every time you commit a change to your repository. To make the wiki be
 updated each time a commit is made, it can be run from (or as) a
 post-commit hook.
