web commit by http://jeremie.koenig.myopenid.com/

--- a/doc/todo/preview_changes.mdwn
+++ b/doc/todo/preview_changes.mdwn
@@ -9,4 +9,4 @@ Some discussion from the main [[/index/discussion]] page:
 >> --[[Joey]]
 >>
 
-See the [[plugins/contrib/showdiff]] plugin --[[JeremieKoenig]]
+See the [[plugins/editdiff]] plugin --[[JeremieKoenig]]
