web commit by http://jeremie.koenig.myopenid.com/: correction

--- a/doc/plugins/editdiff.mdwn
+++ b/doc/plugins/editdiff.mdwn
@@ -1,7 +1,7 @@
 [[template id=plugin name=editdiff author="[[JeremieKoenig]]"]]
 [[tag type/useful]]
 
-This plugin adds a "Diff" button when a page is being added.
+This plugin adds a "Diff" button when a page is being edited.
 When clicked, a diff between the stored page and provided content
 is shown in the "Page Preview" area.
 
