web commit by PatrickWinnertz

--- a/doc/todo/latex.mdwn
+++ b/doc/todo/latex.mdwn
@@ -181,6 +181,7 @@ Done. Is that docu fine with you?
 > a test case that tries to feed it bad code and makes sure it rejects it.
 
 I'll test this now on my server. I'll report here later.
+Okay, checked. it works fine. My blacklist tests were successfull.
 
 >
 > Does it really make sense to have an alt tag for the image
@@ -197,7 +198,7 @@ This are of course the minority of people (but I guess also the minority of peop
 > the whole plugin, or do you think that other tex stuff should go in this
 > same plugin?
 
-I'll think over this until I'm at work ;) Only for rendering images... not for generating .tex files ...
+I'll think over this until I'm at work ;) Only for rendering images... not for generating .tex files .../wiki/
 the name is all the same i think. If you like teximg better than switch :)
 
 
