--- a/doc/plugins.mdwn
+++ b/doc/plugins.mdwn
@@ -13,7 +13,7 @@ will fit most uses of ikiwiki.
 
 ## Plugin directory
 
-[[inline pages="plugins/* and !plugins/type/* and !plugins/write and
-!plugins/contrib and !plugins/install and !*/Discussion"
+[[inline pages="plugins/* and !plugins/type/* and !plugins/write and 
+!plugins/write/* and !plugins/contrib and !plugins/install and !*/Discussion"
 feedpages="created_after(plugins/graphviz)" archive="yes"
 rootpage="plugins/contrib" postformtext="Add a new plugin named:" show=0]]
