--- a/doc/plugins/googlecalendar.mdwn
+++ b/doc/plugins/googlecalendar.mdwn
@@ -1,6 +1,8 @@
 [[template id=plugin name=googlecalendar author="[[Joey]]"]]
 [[tag type/special-purpose]]
 
+*Note*: This plugin is deprecated. Please switch to the [[embed]] plugin.
+
 This plugin allows embedding a google calendar iframe in the wiki.
 Normally, if the [[htmlscrubber]] is enabled, such iframes are scrubbed out
 of the wiki content since they're not very safe if created by malicious
