web commit by https://camrdale.myopenid.com/: Added DebTorrent to the projects list using ikiwiki.

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -19,6 +19,7 @@ Projects
 * The [cairo graphics library](http://cairographics.org/) website.
 * [Nouvelles Informations Positives Libres community](http://wiki.nipl.net/)
 * The [Portland State Aerospace Society](http://psas.pdx.edu) website.  Converted from a combination of TWiki and MoinMoin to ikiwiki, including full history ([[rcs/Git]] backend).
+* [DebTorrent](http://debtorrent.alioth.debian.org)
 
 Personal sites and blogs
 ========================
