--- a/doc/plugins/conditional/discussion.mdwn
+++ b/doc/plugins/conditional/discussion.mdwn
@@ -48,4 +48,4 @@ conditional right -- I have a "]] left over at the end (looking at the rendered 
 the annual calendar on archives/200[4567].mdwn, and monthly calendars for the proper month on archives/200[4567]/[0..12].mdwn. Do I have to create separate sidebars?
 I do not use the usedir directive, so all my annual archive pages live in archives/, and all my monthly archive pages live in, say, archives/2007/ --ManojSrivastava
 
- 
+> Are you using triple quoting for the text in the conditional? --[[Joey]]
