--- a/doc/todo/wikiwyg/discussion.mdwn
+++ b/doc/todo/wikiwyg/discussion.mdwn
@@ -93,7 +93,7 @@ misc:
   not insert the javascript into html pages?
 * When editing a whole page with wikiwyg, I think it would be good to keep
   the save, preview, cancel buttons at the bottom like they are in a
-  regular page edit. Kind of a least suprise thing, so that enabling
+  regular page edit. Also the comments box. Kind of a least suprise thing, so that enabling
   wikiwyg for whole-page editing basically just changes how the edit box
   behaves and keeps the rest of the behavior the same. And I think the preview
   button should show a preview rendered server-side, like with a regular edit,
