web commit by http://joey.kitenet.net/

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -82,11 +82,7 @@ Bulleted list
 * <http://www.gnu.org/>
 * [GNU](http://www.gnu.org/)
 * [Email](mailto:noone@invalid)
-* WikiLink without any markup.
-
-Here is an edit to test page subscription.
-Testing it again....  please work :)
-
+* WikiLink without any markup. (Not supported per default.)
 -----
 
 This sandbox is also a [[blog]]!
