--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (2.6) UNRELEASED; urgency=low
+ikiwiki (2.6) unstable; urgency=low
 
   * Various minor bug fixes for silly mistakes in the code, thanks to the
     various reviewers.
@@ -58,7 +58,7 @@ ikiwiki (2.6) UNRELEASED; urgency=low
   * The googlecalendar plugin is now deprecated, and will be removed
     eventually. Please switch to using the embed plugin.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 23 Aug 2007 14:08:46 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 24 Aug 2007 17:09:44 -0400
 
 ikiwiki (2.5) unstable; urgency=low
 
