--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -57,3 +57,5 @@ Suggestions of ideas for plugins:
 > take some fiddling to make it fit into the ikiwiki templates, and you might
 > or might not want to convert pages in the SEE ALSO as
 > well. --[[JoshTriplett]]
+
+* As I couldn't find another place to ask, I'll try here. I would like to install some contributed plugins, but can not find anywhere to downlod them.
