web commit by http://jeremie.koenig.myopenid.com/: precision

--- a/doc/bugs/unrecognized___34__do__61__blog__34___CGI_parameter_when_creating_todo_item.mdwn
+++ b/doc/bugs/unrecognized___34__do__61__blog__34___CGI_parameter_when_creating_todo_item.mdwn
@@ -10,5 +10,7 @@ An the following appears below:
     
     Error: unknown do parameter
 
+This is harmless.
 I have to go, but will have a look at what could be going on when I'm back.
+
 --[[JeremieKoenig]]
