* Fix bug when blogging by cgi, introduced in last version.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (2.7) UNRELEASED; urgency=low
+
+  * Fix bug when blogging by cgi, introduced in last version.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 26 Aug 2007 13:30:31 -0400
+
 ikiwiki (2.6) unstable; urgency=low
 
   * Various minor bug fixes for silly mistakes in the code, thanks to the
