--- a/doc/bugs/unrecognized___34__do__61__blog__34___CGI_parameter_when_creating_todo_item.mdwn
+++ b/doc/bugs/unrecognized___34__do__61__blog__34___CGI_parameter_when_creating_todo_item.mdwn
@@ -14,3 +14,5 @@ This is harmless.
 I have to go, but will have a look at what could be going on when I'm back.
 
 --[[JeremieKoenig]]
+
+[[fixed|done]] --[[Joey]]
