--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -60,4 +60,4 @@ Suggestions of ideas for plugins:
 
 * As I couldn't find another place to ask, I'll try here. I would like to install some contributed plugins, but can not find anywhere to downlod them.
 
-  > Not sure what you mean, the [[plugins/contrib]] page lists contributed plugins, and each of their pages tells where to download the plugin from. --[[Joey]]
+  > Not sure what you mean, the [[plugins/contrib]] page lists contributed plugins, and each of their pages tells where to download the plugin from.. --[[Joey]]
