* Fix a bug in unlockwiki intorduced last version that made it crash ikiwiki   if it wasn't locked when called. This is known to break post-commit   emails.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
-ikiwiki (2.7) UNRELEASED; urgency=low
+ikiwiki (2.6.1) UNRELEASED; urgency=low
 
   * Fix bug when blogging by cgi, introduced in last version.
+  * Fix a bug in unlockwiki intorduced last version that made it crash ikiwiki
+    if it wasn't locked when called. This is known to break post-commit
+    emails.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 26 Aug 2007 13:30:31 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 26 Aug 2007 13:37:14 -0400
 
 ikiwiki (2.6) unstable; urgency=low
 
