--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,12 @@
-ikiwiki (2.6.1) UNRELEASED; urgency=low
+ikiwiki (2.6.1) unstable; urgency=low
 
-  * Fix bug when blogging by cgi, introduced in last version.
+  * Ye olde brown paper bag.
+  * Fix minor bug when blogging by cgi, introduced in last version.
   * Fix a bug in unlockwiki intorduced last version that made it crash ikiwiki
     if it wasn't locked when called. This is known to break post-commit
     emails.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 26 Aug 2007 13:37:14 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 26 Aug 2007 13:38:23 -0400
 
 ikiwiki (2.6) unstable; urgency=low
 
