--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -5,7 +5,7 @@ Test. Chinese. 我是中国人，泰山、黄河。
 
 testing openid ... ignore.
 
-Test. Проверка. テスト ığüşöçİ ทดสอบ éphémère
+Test. Проверка. Тэстенг. テスト ığüşöçİ ทดสอบ éphémère
 
 Testing right-to-left text: (שרה) should be spelled shin (ש) resh (ר) heh (ה) from right to left.
 
