--- a/doc/todo/stylesheet_suggestion_for_verbatim_content.mdwn
+++ b/doc/todo/stylesheet_suggestion_for_verbatim_content.mdwn
@@ -3,6 +3,10 @@ optional, but IMHO, we should at least define a monospace font.
 
 -- Recai (via email)
 
+AFAICS, my web browser already has a built-in monospace font, which I can
+see in action in the preformatted patch below. So I don't see why the
+default style sheet should do this. --[[Joey]]
+
 [[tag patch]]
 
 <pre>
